削除機能完了

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -17,3 +17,4 @@ Hello Heroku!
       = book.title
       = "#{book.price}円"
       = book.memo
+      = link_to '削除', book_path(book), method: :delete
