--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,7 +5,7 @@
     - if Rails.env.development?
       %title PracticeHeroku
     - elsif Rails.env.production?
-      %title 本番だよ
+      %title Hello Heroku
     = csrf_meta_tags
     = csp_meta_tag
     = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload'
